added a new block work 1

--- a/graduation-one/index.html
+++ b/graduation-one/index.html
@@ -469,6 +469,78 @@
           </div>
         </div>
       </div>
+      <div class="main-three">
+        <div class="container">
+          <h2 class="main-heading-three">
+            Discover More NFTs
+          </h2>
+          <p class="main-heading-text-three">
+            Explore new trending NFTs
+          </p>
+          <div class="main-three-box">
+            <div class="card-main-three">
+              <img src="img/card-first.png" alt="" class="main-three-picture" />
+              <div class="card-main-three-text"> 
+                <p class="main-three-heading">
+                  Distant Galaxy
+                </p>
+                <div class="box-main-three">
+                  <img src="img/avatar-girl-one.png" alt="avatar" class="avatar-main-three" />
+                  <span class="avatar-main-three-text">MoonDancer</span>
+                </div>
+                <div class="second-box-main-three">
+                  <p class="second-box-left">Price</p>
+                  <p class="second-box-right">Highest Bid</p>
+                </div>
+                <div class="third-box-main-three">
+                  <p class="third-box-left">1.63 ETH</p>
+                  <p class="third-box-right">0.33 wETH</p>
+                </div>
+              </div>
+            </div>
+            <div class="card-main-three">
+              <img src="img/card-second.png" alt="" class="main-three-picture" />
+              <div class="card-main-three-text"> 
+                <p class="main-three-heading">
+                  Distant Galaxy
+                </p>
+                <div class="box-main-three">
+                  <img src="img/avatar-boy-two.png" alt="avatar" class="avatar-main-three" />
+                  <span class="avatar-main-three-text">MoonDancer</span>
+                </div>
+                <div class="second-box-main-three">
+                  <p class="second-box-left">Price</p>
+                  <p class="second-box-right">Highest Bid</p>
+                </div>
+                <div class="third-box-main-three">
+                  <p class="third-box-left">1.63 ETH</p>
+                  <p class="third-box-right">0.33 wETH</p>
+                </div>
+              </div>
+            </div>
+            <div class="card-main-three">
+              <img src="img/card-third.png" alt="" class="main-three-picture" />
+              <div class="card-main-three-text"> 
+                <p class="main-three-heading">
+                  Distant Galaxy
+                </p>
+                <div class="box-main-three">
+                  <img src="img/avatar-girl-three.png" alt="avatar" class="avatar-main-three" />
+                  <span class="avatar-main-three-text">MoonDancer</span>
+                </div>
+                <div class="second-box-main-three">
+                  <p class="second-box-left">Price</p>
+                  <p class="second-box-right">Highest Bid</p>
+                </div>
+                <div class="third-box-main-three">
+                  <p class="third-box-left">1.63 ETH</p>
+                  <p class="third-box-right">0.33 wETH</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
