--- a/graduation-one/index.html
+++ b/graduation-one/index.html
@@ -542,5 +542,101 @@
         </div>
       </div>
     </main>
+
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-box">
+          <div class="footer-left-box">
+            <ul class="left-box-list">
+              <li class="left-box-item-header">
+                <img
+                  src="img/storefront.png"
+                  class="footer_logo_img"
+                  alt="store"
+                />
+                <span class="footer-logo-name">NFT</span>
+                <span class="footer-logo-name">Marketplace</span>
+              </li>
+              <li class="left-box-item">
+                <a href="#" class="left-text-one">
+                  NFT marketplace UI created <br />
+                  with Anima for Figma.
+                </a>
+              </li>
+              <li class="left-box-item">
+                <a href="#" class="left-text-two">Join our community</a>
+              </li>
+              <li class="left-box-item">
+                <a href="#"><img src="img/discord-logo.png" 
+                  alt="discord logo" 
+                  class="footer-discord"></a>
+                <a href="#"><img src="img/youtube-logo.png" 
+                  alt="youtube logo" 
+                  class="footer-youtube"></a>
+                <a href="#"><img src="img/twitter-logo.png" 
+                  alt="twitter logo" 
+                  class="footer-twitter"></a>
+                <a href="#"><img src="img/instagram-logo.png" 
+                  alt="instagram logo" 
+                  class="footer-instagram"></a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-middle-box">
+            <ul class="middle-box-list">
+              <li class="middle-box-item">
+                <p class="middle-text-header">Explore</p>
+              </li>
+              <li class="middle-box-item">
+                <a href="#" class="middle-text-one">Marketplace</a>
+              </li>
+              <li class="middle-box-item">
+                <a href="#" class="middle-text-two">Rankings</a>
+              </li>
+              <li class="middle-box-item">
+                <a href="#" class="middle-text-three">Connect a Wallet</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-right-box">
+            <ul class="right-box-list">
+              <li class="right-box-item">
+                <p class="right-text-header">Join Our Weekly Digest</p>
+              </li>
+              <li class="right-box-item">
+                <a href="#" class="right-text-one">
+                  Get exclusive promotions & updates <br />
+                  straight to your inbox.
+                </a>
+              </li>
+              <li class="right-box-item">
+                <div class="footer-input">
+                  <input
+                    type="email"
+                    placeholder="Enter your email here"
+                    class="footer-email-input"
+                  />
+                  <button
+                    type="submit"
+                    class="footer-subscribe-button"
+                    id="subscribe-btn"
+                  >
+                    Subscribe
+                  </button>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-trademark">
+          <div class="footer-line"></div>
+          <p class="footer-trademark-text">
+            Ⓒ NFT Market. Use this template freely.
+          </p>
+        </div>
+      </div>
+    </footer>
+  </body>
   </body>
 </html>
