--- a/graduation-two/index.html
+++ b/graduation-two/index.html
@@ -114,18 +114,30 @@
                 <a href="#" class="left-text-two">Join our community</a>
               </li>
               <li class="left-box-item">
-                <a href="#"><img src="img/discord-logo.png" 
-                  alt="discord logo" 
-                  class="footer-discord"></a>
-                <a href="#"><img src="img/youtube-logo.png" 
-                  alt="youtube logo" 
-                  class="footer-youtube"></a>
-                <a href="#"><img src="img/twitter-logo.png" 
-                  alt="twitter logo" 
-                  class="footer-twitter"></a>
-                <a href="#"><img src="img/instagram-logo.png" 
-                  alt="instagram logo" 
-                  class="footer-instagram"></a>
+                <a href="#"
+                  ><img
+                    src="img/discord-logo.png"
+                    alt="discord logo"
+                    class="footer-discord"
+                /></a>
+                <a href="#"
+                  ><img
+                    src="img/youtube-logo.png"
+                    alt="youtube logo"
+                    class="footer-youtube"
+                /></a>
+                <a href="#"
+                  ><img
+                    src="img/twitter-logo.png"
+                    alt="twitter logo"
+                    class="footer-twitter"
+                /></a>
+                <a href="#"
+                  ><img
+                    src="img/instagram-logo.png"
+                    alt="instagram logo"
+                    class="footer-instagram"
+                /></a>
               </li>
             </ul>
           </div>
